--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -611,10 +611,10 @@ section
 		margin: 0
 	p
 		color: #000
-		font-size: 24px
+		font-size: 19px
 		margin: 8px 0
 	p.text-blue
-		color: #1b3a4f
+		color: #0058ed
 
 
 .fn-popup-sosial
@@ -625,8 +625,8 @@ section
 		width: 22%
 		margin: 0 4px
 		.sosial
-			color: #1b3a4f
-			background: #fff
+			color: #fff
+			background: #0058ed
 			border-radius: 70px
 			width: 50px
 			padding: 8px 0
@@ -640,12 +640,12 @@ section
 			background: rgba(255, 255, 255, 0)
 			margin: 0 auto 18px
 			img
-				width: 64%
+				width: 86%
 				margin: 0 auto
 
 		p
 			color: #1b3a4f
-			font-size: 18px
+			font-size: 17px
 
 
 .close
@@ -694,14 +694,15 @@ section
 .popup
 	margin: 70px auto
 	padding: 20px
-	background: #fff
+	background: url('../img/bg-popup.jpg')
+	background-size: cover
 	border-radius: 5px
 	width: 80%
 	position: relative
 	transition: all 5s ease-in-out
 	h2
 		margin-top: 0
-		color: #333
+		color: #0058ed
 		font-family: Tahoma, Arial, sans-serif
 	.close
 		position: absolute
