--- a/css/main.css
+++ b/css/main.css
@@ -522,11 +522,12 @@ section {
 
 .fn-student__slide-middle--item {
   background: #fdfbfb;
-  margin: 0 10px;
+  margin: 0;
   padding-bottom: 40px;
   border-radius: 10px;
   overflow: hidden;
   height: 460px;
+  width: 100%;
   -webkit-box-shadow: 0px 4px 13px 0px rgba(28, 28, 29, 0.16);
   box-shadow: 0px 4px 13px 0px rgba(28, 28, 29, 0.16); }
   .fn-student__slide-middle--item p {
