--- a/css/main.css
+++ b/css/main.css
@@ -841,3 +841,14 @@ section {
   top: 40%;
   width: 100%;
   left: 0; }
+
+
+.fn-contact__form--two .form-input .input{
+ color: #000;
+}
+
+
+
+
+
+
