--- a/css/main.css
+++ b/css/main.css
@@ -872,6 +872,8 @@ section {
 
 .fn-funist__text{
 	text-align: center;
+	position: relative;
+    z-index: 1;
 }
 
 .fn-funist__text h4{
@@ -918,4 +920,5 @@ position: relative;
 	position: absolute;
 	bottom: 0;
 	left: 0;
+	z-index: 0;
 }
